kind-persistentpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: pv-claim
  containers:
    - name: pv-container
      image: ubuntu
      args: ["tail", "-f", "/dev/null"]
      volumeMounts:
        - mountPath: "/upload"
          name: pv-storage
