kind-rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolling-update
spec:
  replicas: 4
  selector:
    matchLabels:
      app: rolling-update
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      name: rolling-update
      labels:
        app: rolling-update
    spec:
      containers:
        - name: rolling-update
          image: sihyun2/firstserviced
