kind-clusterip-service1.yaml
apiVersion: v1
kind: Service
metadata:
 name: cluster-ip-service1
spec:
 ports:
   - name: web-server-port1
     port: 7000
     targetPort: 8080
 selector:
   app: my-web-server1
 type: ClusterIP
