kind-clusterip-service2.yaml
apiVersion: v1
kind: Service
metadata:
 name: cluster-ip-service2
spec:
 ports:
   - name: web-server-port2
     port: 7001
     targetPort: 8080
 selector:
   app: my-web-server2
 type: ClusterIP
