kind-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port
spec:
  ports:
    - name: web-server-port
      port: 80
      targetPort: 8080
  selector: 
    app: my-web-server1
  type: NodePort
