kind-nodeport2.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port2
spec:
  ports:
    - name: web-server-port2
      port: 81
      targetPort: 8080
  selector: 
    app: my-web-server2
  type: NodePort
