kind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 ingressClassName: nginx
 rules:
 - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: cluster-ip-service1
            port:
              number: 8080
      - path: /service2/(.*) 
        pathType: Prefix
        backend:
          service:
            name: cluster-ip-service2
            port:
              number: 8080
